syntax = "proto3";

import "google/protobuf/descriptor.proto";

package Phantom.ProtoStore;

enum SortOrder {
    Ascending = 0;
    Descending = 1;
};

message ProtoStoreFieldOptions {
    SortOrder SortOrder = 1;
};

message ProtoStoreMessageOptions {
    SortOrder SortOrder = 1;
};

extend google.protobuf.FieldOptions {
  optional ProtoStoreFieldOptions FieldOptions = 50000;
}

extend google.protobuf.MessageOptions {
  optional ProtoStoreMessageOptions MessageOptions = 50000;
}

message MergeParameters {
    uint64 MergesPerLevel = 1;
    uint64 MaxLevel = 2;
}
